<?xml version="1.0"?>
<package>
  <name>manipulator_h</name>
  <version>0.0.1</version>
  <description>ROS packages for the ROBOTIS MANIPULATOR-H (meta package)</description>
  <license>BSD</license>
  <author email="sch@robotis.com">sch</author>
  <maintainer email="pyo@robotis.com">pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H</url>
  <url type="website">http://wiki.ros.org/ROBOTIS-MANIPULATOR-H</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>manipulator_h_base_module</run_depend>
  <run_depend>manipulator_h_base_module_msgs</run_depend>
  <run_depend>manipulator_h_bringup</run_depend>
  <run_depend>manipulator_h_description</run_depend>
  <run_depend>manipulator_h_gazebo</run_depend>
  <run_depend>manipulator_h_gui</run_depend>
  <run_depend>manipulator_h_kinematics_dynamics</run_depend>
  <run_depend>manipulator_h_manager</run_depend>
  <export><metapackage/></export>
</package>
