<?xml version="1.0"?>
<package format="2">
  <name>manipulator_h</name>
  <version>0.3.1</version>
  <description>
    ROS packages for the ROBOTIS MANIPULATOR-H (metapackage)
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/manipulator_h</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/manipulator_h/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>manipulator_h_base_module</exec_depend>
  <exec_depend>manipulator_h_base_module_msgs</exec_depend>
  <exec_depend>manipulator_h_bringup</exec_depend>
  <exec_depend>manipulator_h_description</exec_depend>
  <exec_depend>manipulator_h_gazebo</exec_depend>
  <exec_depend>manipulator_h_gui</exec_depend>
  <exec_depend>manipulator_h_kinematics_dynamics</exec_depend>
  <exec_depend>manipulator_h_manager</exec_depend>
  <export><metapackage/></export>
</package>
