<?xml version="1.0"?>
<package>
  <name>manipulator_h_base_module</name>
  <version>0.2.0</version>
  <description>
    The manipulator_h_base_module package
    This package describes basic function to control ROBOTIS MANIPULATOR-H.
    This module is based on position control.
    We provides joint space and task space control (forward kinematics, inverse kinematics).
  </description>
  <license>BSD</license>
  <author email="sch@robotis.com">sch</author>
  <maintainer email="pyo@robotis.com">pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H</url>
  <url type="website">http://wiki.ros.org/ROBOTIS-MANIPULATOR-H</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_math</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>manipulator_h_kinematics_dynamics</build_depend>
  <build_depend>manipulator_h_base_module_msgs</build_depend>
  <run_depend>robotis_device</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <export></export>
</package>
