<?xml version="1.0"?>
<package format="2">
  <name>manipulator_h_base_module</name>
  <version>0.3.1</version>
  <description>
    The manipulator_h_base_module package
    This package describes basic function to control ROBOTIS MANIPULATOR-H.
    This module is based on position control.
    We provides joint space and task space control (forward kinematics, inverse kinematics).
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/manipulator_h_base_module</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/manipulator_h/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>manipulator_h_base_module_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>robotis_math</depend>
  <depend>robotis_framework_common</depend>
  <depend>manipulator_h_kinematics_dynamics</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>
</package>
