<?xml version="1.0"?>
<package>
  <name>manipulator_h_bringup</name>
  <version>0.0.1</version>
  <description>The manipulator_h_bringup package</description>
  <license>BSD</license>
  <author email="sch@robotis.com">sch</author>
  <maintainer email="pyo@robotis.com">pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H</url>
  <url type="website">http://wiki.ros.org/ROBOTIS-MANIPULATOR-H</url>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
