<?xml version="1.0"?>
<package format="2">
  <name>manipulator_h_description</name>
  <version>0.3.1</version>
  <description>
    The manipulator_h_description package
    This package includes URDF model of ROBOTIS MANIPULATOR-H.
    Additionally, we provide full kinematics and dynamics information of each link.
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/manipulator_h_description</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/manipulator_h/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
