<?xml version="1.0"?>
<package>
  <name>manipulator_h_gazebo</name>
  <version>0.2.3</version>
  <description>
    The manipulator_h_gazebo package
    This package provides GAZEBO simulation environment for ROBOTIS MANIPULATOR-H.
    We provides two controllers such as position and effort controllers.
  </description>
  <license>BSD</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H</url>
  <url type="website">http://wiki.ros.org/ROBOTIS-MANIPULATOR-H</url>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
