<?xml version="1.0"?>
<package format="2">
  <name>manipulator_h_gui</name>
  <version>0.3.1</version>
  <description>
    The manipulator_h_gui package
    This package provides simple GUI to control ROBOTIS MANIPULATOR-H.
    This GUI is connected to manipulator_h_base_module.
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/manipulator_h_gui</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/manipulator_h/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-MANIPULATOR-H/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>manipulator_h_base_module_msgs</depend>
  <depend>qt_build</depend>
  <depend>libqt4-dev</depend>
  <depend>cmake_modules</depend>
  <depend>eigen_conversions</depend>
  <depend>eigen</depend>
</package>
